Bug 463329 - Reply to a direct message is posted as public
Summary: Reply to a direct message is posted as public
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.11.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-22 09:49 UTC by Enrico
Modified: 2022-12-23 10:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Enrico 2022-12-22 09:49:59 UTC
SUMMARY
***
When you receive a direct message, it's shown in the Notification menu.
If you try to reply to that message Tokodon opens up a new window to compose the message. The privacy setting of that message is "Public".
I think Tokodon should "copy" the privacy setting of the message you are trying to reply to (at least for direct messages).
***

STEPS TO REPRODUCE
1. Receive a direct message
2. Open the Notification menu
3. Press Reply on the direct message

OBSERVED RESULT
The reply-window is opened but the privacy setting is "Public"

EXPECTED RESULT
The privacy setting should be Direct Message as the original message.

SOFTWARE/OS VERSIONS
Operating System: RebornOS Linux
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7
Kernel Version: 6.0.12-arch1-1 (64-bit)
Graphics Platform: Wayland
Tokodon: 22.11.2
Comment 1 Carl Schwan 2022-12-23 10:02:43 UTC
Git commit e76f6b953c93258d31dfa1c5703fd9439c9e3880 by Carl Schwan.
Committed on 23/12/2022 at 10:02.
Pushed by carlschwan into branch 'master'.

Propagate visibility in replies

Signed-off-by: Carl Schwan <carl@carlschwan.eu>

M  +3    -0    src/abstracttimelinemodel.cpp
M  +1    -0    src/abstracttimelinemodel.h
M  +1    -0    src/content/ui/PostDelegate.qml

https://invent.kde.org/network/tokodon/commit/e76f6b953c93258d31dfa1c5703fd9439c9e3880