Propagate visibility in replies

BUG: 463329

Signed-off-by: Carl Schwan <carl@carlschwan.eu>